[FIX] html_editor: show default cursor on syntax highlighting scrollbar
Before this commit:

- When a syntax highlighting block contained a scrollbar, hovering over the
  scrollbar displayed a text cursor. This was misleading because the text cursor
  suggests text interaction, while the scrollbar is only used for scrolling.

After this commit:

- The default cursor is now shown when hovering over the scrollbar, avoiding
  this confusion.

task- 6295899

X-original-commit: 195a0b7a48e5d82241eac68c8c5ed49ca12e0f88

--- a/addons/html_editor/static/src/others/embedded_components/plugins/syntax_highlighting_plugin/syntax_highlighting_plugin.scss
+++ b/addons/html_editor/static/src/others/embedded_components/plugins/syntax_highlighting_plugin/syntax_highlighting_plugin.scss
@@ -50,6 +50,11 @@
         &::-webkit-scrollbar-thumb {
             border-radius: 4px;
             background: #888;
+            cursor: default;
+
+            &:hover {
+                background: #{rgba($body-color, 0.8)};
+            }
         }
     }
 
